# fancy_slice

./: .travis.yml  Cargo.toml  readme.md
src/: debug.rs  lib.rs  simple.rs
tests/: tests.rs
