[package]
name = "fancy_slice"
version = "0.1.2"
edition = "2018"
authors = ["Rukai <rubickent@gmail.com>"]
description = "Wraps an `&[u8]` slice to provide a kitchen sink worth of tools"
license = "MIT"
repository = "https://github.com/rukai/fancy_slice"
keywords = ["fancy", "slice"]
categories = ["parsing"]

[package.metadata.docs.rs]
features = [ "debug" ]

[dependencies]
byteorder = "1"

[features]
debug = []
